plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}

android {
    namespace "com.devusercode.upchat"
    compileSdk 33

    defaultConfig {
        applicationId "com.devusercode.upchat"
        minSdk 26
        maxSdk 34
        targetSdk 33
        versionCode 1
        versionName "1.1.1-alpha"
        signingConfig signingConfigs.debug
    }

    buildTypes {
        release {
            debuggable false
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            versionNameSuffix "-release"
        }

        debug {
            minifyEnabled false
            debuggable true
            signingConfig signingConfigs.debug
        }
    }

    compileOptions {
        // Java Version -> 17
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation platform('com.google.firebase:firebase-bom:32.2.0')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-database'
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-config'
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-analytics'

    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'

    implementation 'com.google.android.material:material:1.9.0'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.exifinterface:exifinterface:1.3.6'

    // For generating and scanning QR-Code
    implementation 'com.google.zxing:core:3.5.1'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'

    implementation 'com.squareup.okhttp3:okhttp:4.9.0'

    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0'

    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
}
